# oven

./: CMakeLists.txt  LICENCE  README.md
src/: execution_result.cpp  execution_result.h  oven.cpp
src/base/: base64.cpp  base64.h  command_line.cpp  command_line.h
src/system/: child_process.cpp  child_process.h  desktop.cpp  desktop.h  error.cpp  error.h  iocp.cpp  iocp.h  job.cpp  job.h  pipe.cpp  pipe.h  scoped_handle.cpp  scoped_handle.h
